Fixed plural variables to singular. Added rspec for the db column restaurant.

--- a/app/views/restaurants/new.html.haml
+++ b/app/views/restaurants/new.html.haml
@@ -1,6 +1,6 @@
 %h2 Restaurant registration
 
-= form_for (@restaurants) do |f|
+= form_for (@restaurant) do |f|
   .field
     = f.label :name
     %br/
