add test for 2 dishes and test for controll that there are 2 dishes in one cart

--- a/app/views/menus/show.html.haml
+++ b/app/views/menus/show.html.haml
@@ -2,11 +2,10 @@
 = notice
 = @restaurant.name
 = @restaurant.menu.name
-
 - @restaurant.menu.dishes.each do |dish|
   %div{class: "dish-#{dish.id}"}
     = dish.name
     = dish.price
-    = form_tag(items_path, method: 'post') do
+    = form_tag(@cartpath, method: 'post') do
       = submit_tag('Buy')
       = hidden_field_tag(:dish_id, dish.id)
