--- a/app/views/menus/show.html.haml
+++ b/app/views/menus/show.html.haml
@@ -1,5 +1,8 @@
 %h2 Menu
 = notice
+- nisse = @cart_nr
+= nisse
+dishes in cart
 = @restaurant.name
 = @restaurant.menu.name
 - @restaurant.menu.dishes.each do |dish|
