--- a/app/views/index/index.html.haml
+++ b/app/views/index/index.html.haml
@@ -1,6 +1,7 @@
 %h1 List Of Restaurants
 %h3 List of food category
-=select("post", "index_index_path", @restaurants.distinct.pluck(:food_style) {|p| [ p.food_style, p.food_style ] }, {prompt: 'List of food category'},{:onchange => 'submit()'})
+= form_for :controller=>'index', :action=>'create' do |f|
+  =select('post', "index_index_path", @restaurants.distinct.pluck(:food_style) {|p| [ p.id , p.food_style ] }, {prompt: 'List of food category'},{:onchange => 'submit()'})
 %ul
   - @restaurants.each do |restaurant|
     %li
