--- a/app/views/index/index.html.haml
+++ b/app/views/index/index.html.haml
@@ -1,7 +1,8 @@
 %h1 List Of Restaurants
 %h3 List of food category
-= form_for :controller=>'index', :action=>'create' do |f|
-  =select('post', "index_index_path", @restaurants.distinct.pluck(:food_style) {|p| [ p.id , p.food_style ] }, {prompt: 'List of food category'},{:onchange => 'submit()'})
+= form_tag select_category_path, method: 'post' do |f|
+  =select('post', "category", @restaurants.distinct.pluck(:food_style) {|p| [ p.id , p.food_style ] }, {prompt: 'List of food category'})
+  = submit_tag 'Submit'
 %ul
   - @restaurants.each do |restaurant|
     %li
