--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,4 +9,5 @@
   %body
     %p.notice= notice
     %p.alert= alert
+    = link_to "Sign Out", destroy_user_session_path, method: :delete
     = yield
