--- a/app/views/menus/show.html.haml
+++ b/app/views/menus/show.html.haml
@@ -1,11 +1,32 @@
-%h2 Menu
+%h2
+  Menu  #{@restaurant.menu.name}
+%h3
+  Restaurant #{@restaurant.name}
 = notice
 = @cart_nr
 dishes in cart.
-%p= @restaurant.name
-%p= @restaurant.menu.name
 %h3 Our fine dishes
-- @restaurant.menu.dishes.each do |dish|
+%h2 Category
+%h3 Starters
+- @starters.each do |dish|
+  %div{class: "dish-#{dish.id}"}
+    = link_to dish.name, dish_path(dish)
+    = dish.price
+    = form_tag(items_path, method: 'post') do
+      = submit_tag('Buy')
+      = hidden_field_tag(:dish_id, dish.id)
+%br
+%h3 Main course
+- @mains.each do |dish|
+  %div{class: "dish-#{dish.id}"}
+    = link_to dish.name, dish_path(dish)
+    = dish.price
+    = form_tag(items_path, method: 'post') do
+      = submit_tag('Buy')
+      = hidden_field_tag(:dish_id, dish.id)
+%br
+%h3 Dessert
+- @dessert.each do |dish|
   %div{class: "dish-#{dish.id}"}
     = link_to dish.name, dish_path(dish)
     = dish.price
