add if test for emty categories

--- a/app/views/menus/show.html.haml
+++ b/app/views/menus/show.html.haml
@@ -7,31 +7,32 @@
 dishes in cart.
 %h3 Our fine dishes
 %h2 Category
-%h3 Starters
-- @starters.each do |dish|
-  %div{class: "dish-#{dish.id}"}
-    = link_to dish.name, dish_path(dish)
-    = dish.price
-    = form_tag(items_path, method: 'post') do
-      = submit_tag('Buy')
-      = hidden_field_tag(:dish_id, dish.id)
-%br
-%h3 Main course
-- @mains.each do |dish|
-  %div{class: "dish-#{dish.id}"}
-    = link_to dish.name, dish_path(dish)
-    = dish.price
-    = form_tag(items_path, method: 'post') do
-      = submit_tag('Buy')
-      = hidden_field_tag(:dish_id, dish.id)
-%br
-%h3 Dessert
-- @dessert.each do |dish|
-  %div{class: "dish-#{dish.id}"}
-    = link_to dish.name, dish_path(dish)
-    = dish.price
-    = form_tag(items_path, method: 'post') do
-      = submit_tag('Buy')
-      = hidden_field_tag(:dish_id, dish.id)
+- if @starters.exists?
+  %h3 Starters
+  - @starters.each do |dish|
+    %div{class: "dish-#{dish.id}"}
+      = link_to dish.name, dish_path(dish)
+      = dish.price
+      = form_tag(items_path, method: 'post') do
+        = submit_tag('Buy')
+        = hidden_field_tag(:dish_id, dish.id)
+- if @mains.exists?
+  %h3 Main course
+  - @mains.each do |dish|
+    %div{class: "dish-#{dish.id}"}
+      = link_to dish.name, dish_path(dish)
+      = dish.price
+      = form_tag(items_path, method: 'post') do
+        = submit_tag('Buy')
+        = hidden_field_tag(:dish_id, dish.id)
+- if @dessert.exists?
+  %h3 Dessert
+  - @dessert.each do |dish|
+    %div{class: "dish-#{dish.id}"}
+      = link_to dish.name, dish_path(dish)
+      = dish.price
+      = form_tag(items_path, method: 'post') do
+        = submit_tag('Buy')
+        = hidden_field_tag(:dish_id, dish.id)
 - if session[:cart_id]
   = link_to 'Checkout', cart_path(session[:cart_id])
