add show rating on recipt page

--- a/app/views/shopping_carts/complete.html.haml
+++ b/app/views/shopping_carts/complete.html.haml
@@ -4,3 +4,9 @@
   %p Total:
   = @cart.total
   SEK
+%br
+Rating
+= @rating.rating
+= form_tag select_category_path, method: 'post' do |f|
+  = f.select(:rating , ['Starter','Main course','Dessert'])
+  = f.submit "Add dish", class: 'button expanded'
