Rating of restaurants (#25)
* install gem 'ratyrate'

* back to basic, deleted gem 'ratyrate'

* added test for rating

* added DB table, added rspec, associaton, model

* add show rating on recipt page

* add select form

* add image

* small uppdate

* small uppdate2

* small uppdate3

* add fix for failing checkout test

* add fix for checkout test

* add new definitions for rate in shoppingcart controller

* set start rating at 3.0 for all new resturants

* add rating to restuarant on index and adjustment to cumber test's

* add test for multible ratings

* add posibility to rate multiple resturants

* refactorin

* remove some unvanted cade

* removed show me the page

* refactored our steps, changed our feature and fixed seeds.rb

* added rating controller and moved rating logic to to it

* moved private method to model from the controller

* adds refactoring of rating function

* add some small cleaning

* add rating array to model

* add moves method to ApplicationController

* moves update rating to model

--- a/app/views/index/index.html.haml
+++ b/app/views/index/index.html.haml
@@ -7,9 +7,20 @@
   =select('post', "category", @restaurants.distinct.pluck(:food_style) {|p| [ p.id , p.food_style ] }, {prompt: 'Choose your style of food!'})
   = submit_tag 'Submit'
 %br
-%h4 List Of Restaurants
-%ul
-  - @restaurants.each do |restaurant|
-    %li
+.row
+  .large-3.columns
+    %h4 List of Restaurants
+  .large-9.columns
+    %h4 Rating
+.row
+  .large-3.columns
+  .large-9.columns
+    = image_tag('rate_l.png')
+- @restaurants.each do |restaurant|
+  .row
+    .large-3.columns
       = link_to restaurant.name, restaurant_path(restaurant)
+    .large-9.columns
+      =image_tag('bar2.png',style:"height: 10px; width: #{restaurant.rating.rating.round(0).to_i * 28}px;")
+      =image_tag('bar.png',style:"height: 10px; width: #{168 - (restaurant.rating.rating.round(0).to_i * 28)}px;")
       %br/
