--- a/app/views/shopping_carts/complete.html.haml
+++ b/app/views/shopping_carts/complete.html.haml
@@ -1,6 +1,24 @@
 %h2 Thank you for your order
+%br
 - @cart.shopping_cart_items.each do |cart_item|
   = cart_item.item.name
-  %p Total:
-  = @cart.total
-  SEK
+  = cart_item.item.price
+  %br
+%p
+Total:
+= @cart.total
+SEK
+%br
+%br
+%br
+- @cart.shopping_cart_items.each do |cart_item|
+  %div{class: "rest-#{cart_item.item.menu.restaurant.id}"}
+    = cart_item.item.menu.restaurant.name
+    %br
+    Current Rating
+    = cart_item.item.menu.restaurant.rating.rating.round(2)
+    = form_for @rating, url: update_path(cart_id: @cart.id,id: cart_item.item.menu.restaurant.id),method: 'post' do |f|
+      = f.select(:rating, Rating.rating_range)
+      = f.submit "Rating"
+      %br
+      %br
