add if test for sign in and bugg fix for items in cart

--- a/app/views/shopping_carts/show.html.haml
+++ b/app/views/shopping_carts/show.html.haml
@@ -15,5 +15,9 @@
     %td
       = @cart.total
       SEK
-= form_tag(complete_path(cart_id: session[:cart_id]), method: 'post') do
-  = submit_tag('Finalize order')
+- if current_user
+  = form_tag(complete_path(cart_id: session[:cart_id]), method: 'post') do
+    = submit_tag('Finalize order')
+- else
+  %h4 Please sign in before checkout
+  = link_to 'Sign in', new_user_session_path
