add small layout fixes

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -67,3 +67,14 @@ footer {
     color: #468847 ;
     text-align: left;
 }
+
+.circle {
+    width:20px;
+    height:20px;
+    border-radius:50px;
+    font-size:16px;
+    color:#fff;
+    line-height:20px;
+    text-align:center;
+    background:#F92F04
+}
