--- a/app/views/shopping_carts/show.html.haml
+++ b/app/views/shopping_carts/show.html.haml
@@ -1,3 +1,4 @@
+= stripe_javascript_tag
 %h2 Your Shopping Cart
 %table.shopping-cart
   %tr
@@ -10,10 +11,13 @@
       %td.product-price
         = cart_item.item.price
         SEK
+
   %tr
     %th Total:
     %td
       = @cart.total
       SEK
-= form_tag(complete_path(cart_id: session[:cart_id]), method: 'post') do
-  = submit_tag('Finalize order')
+= form_tag charges_path do
+  = hidden_field_tag :cart_id, @cart.id
+  %script.stripe-button{ src: 'https://checkout.stripe.com/checkout.js',
+      data: {amount: @cart.total*100, description: 'Slowfood', key: ENV['PUBLISHABLE_KEY'], currency: 'sek'}}
