--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,6 +26,9 @@
             %li
               = link_to 'Sign in', new_user_session_path
             %li
+              - if current_user
+                = link_to 'Your page', show_path(current_user.id)
+            %li
               - if session[:cart_id]
                 = link_to 'Checkout', cart_path(session[:cart_id]), class: 'Checkout'
             %li
