Add login check for cart checkout (#36)
* add feature test for check if user is logd in before checkout

* add if test for sign in and bugg fix for items in cart

* add last fixes to wording and sign in to recipt feature test

* add small layout fixes

* add corection to feature test

* add som more fixies

* fix merge error

* Refactoring and adds develop.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,12 +29,15 @@
             %li
               - if session[:cart_id]
                 = link_to 'Cart', cart_path(session[:cart_id])
-                = @cart.shopping_cart_items.count
-                Items in cart
+            %li
+              - if session[:cart_id]
+                .circle
+                  = @cart.shopping_cart_items.count
     %p.notice= notice
     %p.alert= alert
-    = yield
-
+  .row
+    .large-12.columns
+      = yield
   %footer
     .wrap.row.small-up-1.medium-up-3
       .column
