--- a/app/views/shopping_carts/show.html.haml
+++ b/app/views/shopping_carts/show.html.haml
@@ -17,7 +17,11 @@
     %td
       = @cart.total
       SEK
-= form_tag charges_path do
-  = hidden_field_tag :cart_id, @cart.id
-  %script.stripe-button{ src: 'https://checkout.stripe.com/checkout.js',
-      data: {amount: @cart.total*100, description: 'Slowfood', key: ENV['PUBLISHABLE_KEY'], currency: 'sek'}}
+- if current_user
+  = form_tag charges_path do
+    = hidden_field_tag :cart_id, @cart.id
+    %script.stripe-button{ src: 'https://checkout.stripe.com/checkout.js',
+        data: {amount: @cart.total*100, description: 'Slowfood', key: ENV['PUBLISHABLE_KEY'], currency: 'sek'}}
+- else
+  %h4 Please sign in before Finalize Purchase
+  = link_to 'Sign in', new_user_session_path
