add fix to multple ratings

--- a/app/views/index/show.html.haml
+++ b/app/views/index/show.html.haml
@@ -6,10 +6,11 @@
         %th
           = cart_i.item.menu.restaurant.name
           = cart_x.created_at.strftime('%Y-%m-%d')
-          %div{class: "rest-#{cart_i.item.menu.restaurant.id}"}
-            Current Rating
-            = cart_i.item.menu.restaurant.rating.rating.round(2)
-          %th
+          - if @usr == nil
+            %div{class: "rest-#{cart_i.item.menu.restaurant.id}"}
+              Current Rating
+              = cart_i.item.menu.restaurant.rating.rating.round(2)
+            %th
         %tr
           %th Name
           %th Price
@@ -25,11 +26,15 @@
             %td
               = cart_x.total
               SEK
-
-- if @usr.check == true
-  %div{class: "rest-#{Rating.find(@usr.rating_id).restaurant_id}"}
-    = form_for @rating, url: update_path(id: Rating.find(@usr.rating_id).restaurant_id),method: 'post' do |f|
+- @userr.distinct.pluck(:rating_id).uniq.each do |userr|
+  - @rest = Rating.find_by(id: userr).restaurant
+  %div{class: "rest-#{@rest.id}"}
+    = @rest.name
+    %br
+    Current Rating
+    = @rest.rating.rating.round(2)
+    = form_for @rating, url: update_path(id: @rest.id),method: 'post' do |f|
       = f.select(:rating, Rating.rating_range)
-      = f.submit "Rating"
+      = f.submit "Rating", class: 'round button'
       %br
       %br
